# Framer

./: .gitignore  docker-compose.yaml  docker-compose.yml
backend/: Cargo.toml  Dockerfile  README.md  fly.toml
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220714_000001_create_books_table.rs
backend/src/: book.rs  data.rs  main.rs  repo.rs  repo2.rs
frontend/: .dockerignore  .eslintrc.cjs  .gitignore  Dockerfile  bun.dockerfile  fly.toml  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.js
frontend/src/: app.d.ts  app.html
frontend/src/components/: Book.svelte  BookCard.svelte
frontend/src/components/nav/: Navbar.svelte  PageLink.svelte  Pages.ts
frontend/src/lib/: sticky.ts
frontend/src/lib/repos/: books.ts
frontend/src/routes/: __error.svelte  __layout.svelte  index.svelte  index.ts
frontend/src/routes/books/: [id].svelte  [id].ts  index.svelte  index.ts
frontend/src/stores/async-demo/: asyncStores.ts  fake-backend.js
frontend/src/types/: index.ts
