[package]
name = "framer-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.11"
base64 = "0.13.0"
http = "0.2.8"
hyper = { version = "0.14.20", features = ["full"] }
once_cell = "1.13.0"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "migrate", "postgres"] }
tokio = { version = "1.19.2", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }